syntax = "proto3";

package book;

service BookService {
    rpc GetBook(GetBookRequest) returns (Book);
    rpc ListBooks(ListBooksRequest) returns (BookList);
    rpc AddBook(AddBookRequest) returns (Book);
    rpc UpdateBook(UpdateBookRequest) returns (Book);
    rpc DeleteBook(DeleteBookRequest) returns (Book);
  }

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  float price = 5;
}

message BookList {
  repeated Book books = 1;
}

message GetBookRequest {
  string book_id = 1;
}

message ListBooksRequest {
  // Can include any filters or pagination parameters
}

message AddBookRequest {
  Book book = 1;
}

message UpdateBookRequest {
  string book_id = 1;
  Book book = 2;
}

message DeleteBookRequest {
  string book_id = 1;
}
